# deeplearning-repo-1

./: .gitignore  .gitmessage  README.md  requirements.txt
AI/: pyproject.toml
AI/DL/: pyproject.toml  requirements.txt
AI/DL/fall_dataset/: DATASET_TREE.txt  README.md  labels_intervals_template.csv
AI/DL/fall_dataset/mediapipe/: frame_labels.csv  mp_long.csv  mp_samples.csv  mp_wide.csv  windows_labels.csv
AI/DL/fall_dataset/mediapipe/sequence_windows/: window_00000.npy
AI/DL/fall_dataset/yolo/: fall_pose.yaml
AI/DL/fall_dataset/yolo/labels/train/: frame_demo_00000.txt  frame_demo_00001.txt  frame_demo_00002.txt  frame_demo_00004.txt
AI/DL/fall_detection/infer/: yolo_detector.py
AI/DL/fall_detection/train/: frame_by_opencv.py
AI/DL/fall_detection/train/log/: frames_log.csv  frames_log_20250904_204916_e021892f.csv  frames_log_20250904_205530_6a938740.csv  frames_log_20250904_214531_ee3a7fd7.csv  frames_log_20250904_214643_3aff47a4.csv  frames_log_20250905_190825_1f2d6cd0.csv  frames_log_20250905_191050_909965a6.csv  frames_log_20250905_191244_17b0cf96.csv  frames_log_20250905_191330_be5ed6d9.csv
AI/DL/fall_detection/util/: csv_logger.py
AI/DL/yolo_detection_and_pose/: Fall Detectoin Training Data Set - 정규호.csv  mediapipe_dl_project.py  mp_pose_extractor_dl_project_latest.py  requirements.txt  txt  yolo_prototype_v11n_py_ver.py
Programs/: Mic_test.py
Util/: upload_file2drive.py
server/app_server/: alembic.ini  pyproject.toml  simulate_job_execution.py  test_api.py  test_schedule_insert.py
server/app_server/app/: main.py  scheduler_app.py  simple_admin_app.py  simple_main.py
server/app_server/app/adapters/http/: scheduled_job_controller.py
server/app_server/app/adapters/repositories/: scheduled_job_repository_impl.py
server/app_server/app/adapters/scheduler/: __init__.py  apscheduler_adapter.py
server/app_server/app/admin/: __init__.py  admin_app.py  scheduled_job_admin.py  simple_admin.py
server/app_server/app/application/dto/: scheduled_job_dto.py
server/app_server/app/application/use_cases/: scheduled_job_use_cases.py
server/app_server/app/domain/entities/: scheduled_job.py
server/app_server/app/domain/ports/: scheduler_port.py  scheduler_repository.py
server/app_server/app/domain/services/: scheduler_domain_service.py
server/app_server/app/domain/value_objects/: job_id.py
server/app_server/app/infrastructure/: settings.py
server/app_server/app/infrastructure/db/: __init__.py  session.py
server/app_server/app/infrastructure/db/migrations/: env.py
server/app_server/app/infrastructure/db/migrations/versions/: 20250912_aaf84b4b99c7_create_scheduled_jobs_table_v2.py  20250912_create_scheduled_jobs.py  20250912_create_scheduled_jobs_only.py
server/app_server/app/infrastructure/db/models/: __init__.py  scheduled_job.py
server/app_server/app/infrastructure/db/repositories/: __init__.py  scheduled_job_repository.py
server/app_server/app/infrastructure/di/: container.py
server/app_server/app/jobs/: __init__.py  test_functions.py
server/app_server/app/main_versions/: main_hexagonal.py  main_with_admin.py
server/app_server/app/services/: __init__.py  scheduler_service.py
server/app_server/docker/: compose.base.yml  compose.local.yml  compose.prod.yml  docker-compose-test.yml  nginx.Dockerfile  python.Dockerfile  ssh-tunnel.Dockerfile
server/app_server/docker/nginx/: nginx.conf
server/app_server/docs/: app_server_build_action_items_20250912.md  git_message_template_guide.md
server/app_server/nginx/: nginx.conf
server/app_server/scripts/: docker_compose_manager.sh  setup_git_template.sh  ssh_tunnel.py  ssh_tunnel_manager.sh  test_db_connection.py  test_ssh_tunnel.py
server/app_server/staging/: env_variables_guide.md  nginx_setup_log.md  package_verification.md  schedule_test_results.md  sqladmin_setup_log.md  ssh_tunnel_guide.md  work_log.md
server/app_server/staging/trouble_shooting/: docker_compose_issue_report.md
server/stream_server/: index-receiver.html  index-sender.html  server.py
