[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "opencv-python",
  "numpy",
  "ultralytics>=8.3.0",   # ← 추가
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
